refactor: 残存 if・逐次null+blank複合を関数的表現へ（PR #24 レビュー対応）
- 逐次 null+blank 複合を StringUtils へ: AlbumRepositoryImpl の `x == null || x.isBlank()` を StringUtils.isBlank へ、ArticleType/MarkupContent の fromInput 述語を StringUtils::isNotBlank へ。
- 副作用 if を Optional へ: AuditableEntity・AlbumRepositoryImpl の `if (x != null) {...}` を Optional.ofNullable(x).ifPresent(...) へ、ArticleMapper（else あり）は ifPresentOrElse で挙動保持。
- event VO の tentativeDates 正規化 if を Collections.unmodifiableList(ListUtils.emptyIfNull(...)) へ（不変ビューのまま、防御コピーは増やさない）。
- Result.Failure の空チェック if を Validate.notEmpty へ（例外型・メッセージ保持）。

これで if は Result.collectErrors の instanceof 1件のみ（CompositePolicy のリカバリオペレータ指摘と同根のため Result の errors アクセサ追加で別途解決）。全ゲート緑・挙動保持。

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>